scss/_patterns_navigation.scss
/* ... */
@mixin vf-navigation-theme(
  // color for the navigation separator on small screens
  $color-navigation-separator,
  // color for the navigation background
  $color-navigation-background,
  $color-navigation-background--active,
  // color for the navigation text
  $color-navigation-text,
  $color-navigation-background--hover,
  // color for the navigation highlight bar
  $color-navigation-highlight,
  $color-navigation-icon
) {
  background-color: $color-navigation-background;

  .p-navigation__link,
  .p-navigation__link--search-toggle,
  .p-navigation__toggle--close,
  .p-navigation__toggle--open,
  .p-navigation__dropdown-item {
    &,
    &:hover,
    &:visited,
    &:focus {
      color: $color-navigation-text;
    }

    &:hover {
      background-color: $color-navigation-background--hover;
    }

    &[aria-pressed='true'],
    &:active {
      background-color: $color-navigation-background--active;
    }
  }

  .p-navigation__logo-title {
    color: $color-navigation-text;
  }

  .p-navigation__item--dropdown-toggle {
    &::after {
      @include vf-icon-chevron($color-navigation-icon);
    }

    &.is-active > .p-navigation__link {
      background-color: $color-navigation-background--active;
    }
  }

  .p-navigation__toggle--search::after,
  .p-navigation__item .p-navigation__link--search-toggle::after {
    @include vf-icon-search($color-navigation-icon);
  }

  .p-navigation__dropdown,
  .p-navigation__dropdown--right {
    background-color: $color-navigation-background;
  }

  [class*='p-navigation__item'].is-selected > .p-navigation__link {
    background-color: $color-navigation-background--hover;

    @include vf-highlight-bar($color-navigation-highlight, left, true);

    @media (min-width: $breakpoint-navigation-threshold) {
      @include vf-highlight-bar($color-navigation-highlight, bottom, false);
    }
  }

  .p-navigation__nav .p-navigation__link::before {
    background: $color-navigation-separator;
  }

  // on mobile expanded nav needs to match pressed color of the buttons
  &.has-menu-open .p-navigation__nav,
  &.has-search-open .p-navigation__nav {
    background-color: $color-navigation-background--active;

    @media (min-width: $breakpoint-navigation-threshold) {
      background-color: transparent;
    }
  }
}

@mixin vf-navigation-light-theme {
  @include vf-navigation-theme(
    $color-navigation-text: $colors--light-theme--text-default,
    $color-navigation-background: $colors--light-theme--background-default,
    $color-navigation-background--hover: $colors--light-theme--background-alt,
    $color-navigation-background--active: $colors--light-theme--background-active,
    $color-navigation-highlight: $colors--light-theme--text-default,
    $color-navigation-separator: $colors--light-theme--border-low-contrast,
    $color-navigation-icon: $colors--light-theme--text-default
  );
}

@mixin vf-navigation-dark-theme {
  @include vf-navigation-theme(
    $color-navigation-text: $colors--dark-theme--text-default,
    $color-navigation-background: $colors--dark-theme--background-default,
    $color-navigation-background--hover: $colors--dark-theme--background-hover,
    $color-navigation-background--active: $colors--dark-theme--background-active,
    $color-navigation-highlight: $colors--dark-theme--text-default,
    $color-navigation-separator: $colors--dark-theme--border-low-contrast,
    $color-navigation-icon: $colors--dark-theme--text-default
  );
}

